# haskell-presentation-site

./: LICENSE  haskell-presentation-site.cabal
doc/: .gitignore  presentation.tex
src/: Main.hs
src/Site/: Post.hs
static/: error.html  index.html  submit.html
test/: makedb.sql  testdb.sql  tests.sh
