name:          haskell-presentation-site
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          haskell-presentation-site
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , wai-middleware-static >= 0.8.0
                  , text >= 1.2.2.0
                  , HDBC >= 2.3.3.0
                  , HDBC-sqlite3 >= 2.3.3.0
                  , json >= 0.9.1
