name:          haskell-presentation-site
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          haskell-presentation-site
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , wai-middleware-static >= 0.8.0
                  , text >= 1.2.2.0
                  , HDBC >= 2.3.3.0
                  , HDBC-sqlite3 >= 2.3.3.0
                  , aeson >= 0.9.0.1
                  , directory >= 1.1.0.0
                  , transformers >= 0.4.2.0
                  , convertible >= 1.1.0.0
                  , http-types >= 0.9